--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -2,6 +2,11 @@ server:
   port: 8061
 
 eureka:
+  server:
+    renewal-percent-threshold: 0.5
+    enable-self-preservation: true
+    eviction-interval-timer-in-ms: 1000
+  renewalPercentThreshold: 0.85
   instance:
     hostname: localhost
   client:
@@ -10,9 +15,9 @@ eureka:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
-#logging:
-#  pattern:
-#    console: "%clr(%d{yyyy-MM-dd HH:mm:ss}){blue} %clr(${LOG_LEVEL_PATTERN:-%5p}) %m%n"
+logging:
+  pattern:
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss}){blue} %clr(${LOG_LEVEL_PATTERN:-%5p}) %m%n"
 
 spring:
   output:
